--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://GTM-Winter.github.io/DimsFilms",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -14,8 +15,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy" : "npm run build", 
+    "deploy" : "node ./node_modules/gh-pages/bin/gh-pages.js -d build",
     "start": "node ./node_modules/react-scripts/bin/react-scripts.js start",
-    "build": "react-scripts build",
+    "build": "node ./node_modules/react-scripts/scripts/build.js build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
